[package]
name = "rust_headless_chrome"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
async-trait = "0.1.72"
futures = "0.3.28"
libc = "0.2.147"
thirtyfour = "0.31.0"
tokio = { version = "1.29.1", features = ["full"] }
which = "4.4.0"
